Fix alignment

--- a/style.css
+++ b/style.css
@@ -146,5 +146,6 @@ button:hover svg {
   .header-content {
     display: flex;
     align-items: center;
+    justify-content: space-between;
   }
 }
